--- a/package.json
+++ b/package.json
@@ -10,32 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@heroicons/react": "^2.0.18",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "firebase": "^9.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.22.3",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.18",
     "css": "^3.0.0",
-    "eslint": "^8.38.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.23",
+    "eslint-plugin-react-refresh": "^0.3.5",
+    "postcss": "^8.4.35",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwind": "^2.2.12",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2",
+    "vite": "^4.5.2"
   }
 }
